removed most of the warnings now easy tidying up as i am a little tired.